[gd_scene format=3 uid="uid://3lpeo6ap6evi"]

[ext_resource type="Script" uid="uid://b770v2kwau2lw" path="res://scenes/ui/interaction_ui.gd" id="1_e5854"]

[node name="InteractionUI" type="Control" unique_id=1979129113]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
focus_mode = 2
script = ExtResource("1_e5854")

[node name="PanelContainer" type="PanelContainer" parent="." unique_id=107892545]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -162.0
offset_top = -52.0
offset_right = 162.0
offset_bottom = 52.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer" unique_id=1396374163]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer" unique_id=1657011576]
layout_mode = 2
theme_override_constants/separation = 10

[node name="MessageLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer" unique_id=1243955869]
layout_mode = 2
focus_neighbor_left = NodePath("../HBoxContainer/YesButton")
theme_override_font_sizes/font_size = 36
text = "Repair Ship and Set Sail Now?"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer" unique_id=1334162433]
layout_mode = 2
theme_override_constants/separation = 25

[node name="Spacer3" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer" unique_id=617511867]
layout_mode = 2
size_flags_horizontal = 3

[node name="YesButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer" unique_id=555247698]
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath(".")
focus_neighbor_right = NodePath("../NoButton")
focus_neighbor_bottom = NodePath(".")
theme_override_font_sizes/font_size = 36
text = "Yes
Get Me Out of HERE!"

[node name="Spacer2" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer" unique_id=1051151849]
layout_mode = 2
size_flags_horizontal = 3

[node name="OkButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer" unique_id=1065425986]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Ok"

[node name="TakeButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer" unique_id=733143088]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Take"

[node name="Spacer4" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer" unique_id=1426972643]
layout_mode = 2
size_flags_horizontal = 3

[node name="NoButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer" unique_id=1187940419]
layout_mode = 2
focus_neighbor_left = NodePath("../YesButton")
focus_neighbor_top = NodePath(".")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath(".")
theme_override_font_sizes/font_size = 36
text = "No
I'll gather more resources,
for the journey home."

[node name="Spacer" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer" unique_id=451341023]
layout_mode = 2
size_flags_horizontal = 3

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/YesButton" to="." method="_on_yes_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/OkButton" to="." method="_on_ok_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/TakeButton" to="." method="_on_take_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/NoButton" to="." method="_on_no_button_pressed"]
